# gtk-chart

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.c  app.h  chart.c  chart.h  main.c  ui.glade  ui.glade~
examples/: app.c  app.h  data.h  main.c  ui.glade
src/: chart.c  chart.h  config.h.in
