cmake_minimum_required(VERSION 3.20)
project(gtk-chart VERSION 1.0)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
configure_file(src/config.h.in config.h)
if(GTK3_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--export-all-symbols")
    include_directories(${GTK3_INCLUDE_DIRS})    
    add_executable(gtk-chart examples/main.c examples/app.c src/chart.c)
    target_link_libraries(gtk-chart ${GTK3_LIBRARIES})
    file(COPY examples/ui.glade DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
endif()

target_include_directories(gtk-chart PUBLIC "${PROJECT_BINARY_DIR}")